[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/DaddyLongLegs.gd" type="Script" id=1]
[ext_resource path="res://Animations/Hit.tres" type="Animation" id=2]
[ext_resource path="res://Materials/NoOutline.tres" type="Material" id=3]
[ext_resource path="res://Sprites/Enemies/Daddy_Long_Legs.png" type="Texture" id=4]
[ext_resource path="res://Scenes/EnemyScenes/Legs/AntLeg.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Particles/Stun.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Shadow.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 14 )

[sub_resource type="Animation" id=6]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.2, 0.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Land"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4, 1.5, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 0.2, 0.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ), Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 624.029

[node name="DaddyLongLegs" type="KinematicBody2D" groups=["enemies"]]
pause_mode = 1
z_index = 1
script = ExtResource( 1 )
maxHp = 300.0
timeBetweenAttacksSmall = 1.5
timeBetweenAttacksBig = 1.6
chaseCooldownSmall = 1.0
chaseCooldownBig = 2.0
walkTimeSmall = 1.0
walkTimeBig = 2.0
stunParts = ExtResource( 6 )
farthestRangedDistance = 350.0
closestRangedDistance = 450.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -50 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = ExtResource( 2 )
anims/Jump = SubResource( 6 )
anims/Land = SubResource( 7 )
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Legs" type="Node2D" parent="."]
visible = false
material = ExtResource( 3 )
scale = Vector2( 0.25, 0.25 )

[node name="Leg" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( 8, -12 )

[node name="Leg2" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( 4, -5.5 )
flipped = false

[node name="Leg3" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( 8, 4 )

[node name="Leg4" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( 8, 12 )
flipped = false

[node name="Leg5" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( -8, -12 )

[node name="Leg6" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( -5.5, -5.5 )

[node name="Leg7" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( -8, 4 )

[node name="Leg8" parent="Legs" instance=ExtResource( 5 )]
material = ExtResource( 3 )
position = Vector2( -8, 12 )

[node name="LegUpdaters" type="Node2D" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )

[node name="LegUpd" type="Position2D" parent="LegUpdaters"]
position = Vector2( 26, -22 )

[node name="LegUpd2" type="Position2D" parent="LegUpdaters"]
position = Vector2( 26, -2 )

[node name="LegUpd3" type="Position2D" parent="LegUpdaters"]
position = Vector2( 26, 10 )

[node name="LegUpd4" type="Position2D" parent="LegUpdaters"]
position = Vector2( 26, 22 )

[node name="LegUpd5" type="Position2D" parent="LegUpdaters"]
position = Vector2( -22, -22 )

[node name="LegUpd6" type="Position2D" parent="LegUpdaters"]
position = Vector2( -22, -2 )

[node name="LegUpd7" type="Position2D" parent="LegUpdaters"]
position = Vector2( -22, 10 )

[node name="LegUpd8" type="Position2D" parent="LegUpdaters"]
position = Vector2( -22, 22 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Shadow" parent="." instance=ExtResource( 7 )]
scale = Vector2( 0.1, 0.1 )
z_index = -1

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 0.93

[node name="Stream" type="AudioStreamPlayer2D" parent="."]
volume_db = -7.5

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
